css spacing & alignment fixes

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -65,7 +65,7 @@
   margin-right: 3em !important;
 }
 
-@media only screen and (min-width: 0px) and (max-width: 600px) {
+@media only screen and (min-width: 0px) and (max-width: 900px) {
   .content-container {
     margin-left: auto !important;
   }
